<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/fragment_tictactoe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context=".ui.tictactoe.TicTacToeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.75"

            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                tools:ignore="NestedWeights" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="22.5dp"
                android:layout_marginBottom="13dp"
                android:layout_weight="2"
                android:background="@drawable/count_background"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_two_won_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#353535"
                    android:textSize="20sp" />
            </LinearLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:weightSum="10">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/player_two_img"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="6.85"
                    android:src="@drawable/profile_img" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25" />

                <TextView
                    android:id="@+id/player_two_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="2.65"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#353535"
                    android:textSize="14sp" />


            </LinearLayout>


            <View
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.25" />

        <LinearLayout
            android:id="@+id/matrix"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginLeft="35sp"
            android:layout_marginRight="35sp"
            android:layout_weight="4"
            android:background="@drawable/grid"
            android:orientation="vertical"
            android:weightSum="10">

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.5"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="2.85"
                android:orientation="horizontal"
                android:weightSum="10">


                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_1"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="1"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_2"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="2"
                    tools:ignore="ContentDescription" />


                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_3"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="3"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="2.85"
                android:orientation="horizontal"
                android:weightSum="10">


                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_4"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="4"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_5"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="5"
                    tools:ignore="ContentDescription" />


                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_6"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="6"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:weightSum="10">


                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_7"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="7"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_8"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="8"
                    tools:ignore="ContentDescription" />


                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <ImageView
                    android:id="@+id/img_9"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:padding="15sp"
                    android:tag="9"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.5" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.25" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <View
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                tools:ignore="NestedWeights" />


            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:weightSum="10">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.15" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/player_one_img"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_gravity="center"
                    android:layout_weight="6.85"
                    android:src="@drawable/profile_img" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.25" />

                <TextView
                    android:id="@+id/player_one_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_gravity="center"
                    android:layout_weight="2.65"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#353535"
                    android:textSize="14sp" />


            </LinearLayout>


            <View
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="4.5" />

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="22.5sp"
                android:layout_marginBottom="13sp"
                android:layout_weight="2"
                android:background="@drawable/count_background"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_one_win_count_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#353535"
                    android:textSize="20sp" />
            </LinearLayout>


            <View
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.6" />

        <TextView
            android:id="@+id/outcomeTTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_lose"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#FA1111"
            android:visibility="invisible" />


    </LinearLayout>
</layout>