<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ticTacToeChoiceFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.tictactoe.TicTacToeChoiceFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/pick_your_side"
        android:textColor="#454545"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/ai_pick_side_cross_img"
            android:layout_width="0dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@drawable/cross"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ai_pick_side_circle_img"
            android:layout_width="0dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:alpha=".4"
            android:src="@drawable/nought"
            tools:ignore="ContentDescription" />

    </LinearLayout>


    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/ai_pick_side_cross_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:src="@drawable/radio_button_checked"
            tools:ignore="ContentDescription,NestedWeights" />

        <ImageView
            android:id="@+id/ai_pick_side_circle_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:src="@drawable/radio_button_unchecked"
            tools:ignore="ContentDescription" />

    </LinearLayout>


    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ai_pick_side_continue_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_2"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/vs_pc"
            android:textAllCaps="false"
            android:textColor="#454545"
            android:textSize="21sp" />

        <android.widget.Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_2"
            android:text="@string/multiplayer"
            android:textAllCaps="false"
            android:textColor="#454545"
            android:textSize="21sp" />

    </LinearLayout>

</LinearLayout>