...
        android:layout_marginBottom="8dp"
        android:text="@string/tic_tac_toe"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_tik_tac_toe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/new_game"
...
