<?xml version="1.0" encoding="utf-8"?>


<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rps_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/rockRB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:button="@drawable/rock"
        android:gravity="center" />

    <RadioButton
        android:id="@+id/paperRB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:button="@drawable/paper"
        android:gravity="center" />

    <RadioButton
        android:id="@+id/scissorsRB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:button="@drawable/scissors"
        android:gravity="center" />
</RadioGroup>
